{
    "version": 1,
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "86d3321f-9c81-438f-be30-72e1ebb1345b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bd0e8c34-ab48-46cd-9f17-9d24d123e941",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "d73884d7-3b8b-4873-8837-f3c7db5088ac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                  "name": "Ability1",
                  "type": "Button",
                  "id": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
                  "expectedControlType": "",
                  "processors": "",
                  "interactions": "",
                  "initialStateCheck": false
                },
                {
                  "name": "Ability2",
                  "type": "Button",
                  "id": "yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy",
                  "expectedControlType": "",
                  "processors": "",
                  "interactions": "",
                  "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b2864000-cba2-4fc2-8dc9-1a3d17e2fe37",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4412783d-98f9-4e2a-a9e3-418abe97f796",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a63dbcc6-0fd8-40b1-a9ac-5beeb7ff5e55",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1654265b-99c5-47b7-a34f-380f0bc6649a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5bc0be74-f211-4686-affb-caece74dedbb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "cdc14358-d408-445e-8a35-dca8a020f0a6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e4c870c5-dae4-4ad1-be4f-d3b1c52c139a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "669b9496-4bd3-4ecd-92a6-0e19c7b38dca",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "21ee40c6-4461-435c-8b90-fbb4b2a62664",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f5374474-2de1-44f0-adb2-6f5d63faed25",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0f7bf843-820f-49f1-b5bd-151d5cc0f280",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                  "name": "",
                  "id": "...",
                  "path": "<Keyboard>/q",
                  "action": "Ability1",
                  "isComposite": false,
                  "isPartOfComposite": false
                },
                {
                  "name": "",
                  "id": "...",
                  "path": "<Keyboard>/e",
                  "action": "Ability2",
                  "isComposite": false,
                  "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}